<resources>
    <string name="app_name">My News Application</string>
    <string name="sample_text">Sample Text</string>
    <string name="search">Search...</string>
    <string name="language">LANGUAGE</string>
    <string name="english">English</string>
    <string name="country">COUNTRY</string>
    <string name="india">India</string>
    <string name="news">News</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search_news">Search News</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
        <item>German</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Hebrew</item>
        <item>Italian</item>
        <item>Dutch</item>
        <item>Norwegian</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Swedish</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="countries">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Czech Republic</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Saudi Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>UAE</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Venuzuela</item>
    </string-array>
</resources>